--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,100 @@
-coverage
-django
-django-environ
-social-auth-app-django
+asgiref==3.2.10
+astroid==2.2.5
+attrs==19.1.0
+autopep8==1.5.4
+backcall==0.1.0
+bleach==3.1.0
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+colorama==0.4.1
+config==0.5.0.post0
+coverage==5.3
+cryptography==3.2.1
+decorator==4.4.0
+decouple==0.0.7
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==3.1
+django-heroku==0.3.1
+entrypoints==0.3
+environ==1.0
+flake8==3.8.4
+flake8-docstrings==1.5.0
+gunicorn==20.0.4
+heroku==0.1.4
+idna==2.10
+imageio==2.5.0
+importlib-metadata==2.0.0
+ipykernel==5.1.1
+ipython==7.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+isort==4.3.21
+jedi==0.14.0
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.5.0
+lazy-object-proxy==1.4.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.5.0
+nbformat==4.4.0
+networkx==2.3
+notebook==5.7.8
+numpy==1.16.4
+numpy-turtle==0.1
+oauthlib==3.1.0
+pandas==0.25.3
+pandocfilters==1.4.2
+parso==0.5.0
+pickleshare==0.7.5
+Pillow==6.1.0
+prometheus-client==0.7.1
+prompt-toolkit==2.0.9
+psycopg2==2.8.6
+pycodestyle==2.6.0
+pycparser==2.20
+pydocstyle==5.1.1
+pyflakes==2.2.0
+pygame==1.9.6
+Pygments==2.4.2
+PyJWT==1.7.1
+pylint==2.3.1
+pyrsistent==0.15.2
+python-dateutil==1.5
+python-decouple==3.3
+python3-openid==3.2.0
+pytz==2019.3
+PyWavelets==1.0.3
+pywinpty==0.5.5
+pyzmq==18.0.1
+qtconsole==4.5.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+scikit-image==0.15.0
+selenium==3.141.0
+Send2Trash==1.5.0
+six==1.12.0
+snowballstemmer==2.0.0
+social-auth-app-django==4.0.0
+social-auth-core==3.3.3
+sqlparse==0.3.1
+terminado==0.8.2
+testpath==0.4.2
+toml==0.10.1
+tornado==6.0.3
+traitlets==4.3.2
+typed-ast==1.4.0
+urllib3==1.25.11
+wcwidth==0.1.7
+webencodings==0.5.1
+whitenoise==5.2.0
+widgetsnbextension==3.4.2
+wrapt==1.11.2
+xlrd==1.2.0
+zipp==3.3.0
