Add delete pinned country button and fix some issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-requests
-gspread
-google-api-python-client
-coverage
-django
-django-environ
-social-auth-app-django
-oauth2client
+gspread~=3.6.0
+google-api-python-client~=1.12.8
+coverage~=5.3
+django~=3.1.3
+django-environ~=0.4.5
+social-auth-app-django~=4.0.0
+oauth2client~=4.1.3
+django-heroku~=0.3.1
+gunicorn~=20.0.4
+whitenoise~=5.2.0
